# pyrinst

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: config.rst  core.rst  index.rst  io.rst  potentials.rst  utils.rst
pkgs/: mace_torch-0.3.14-py3-none-any.whl
src/easy_instanton/config/: atomic_mass.json  logging_config.py
src/easy_instanton/core/: modes.py
src/easy_instanton/core/opt/: optimizers.py  projections.py
src/easy_instanton/io/: xyz.py
src/easy_instanton/utils/: elements.py  mechanics.py
src/pyrinst/: __init__.py  geometries.py  thermo.py
src/pyrinst/cli/: __init__.py  driver.py  fep_eval.py  gen_ref.py  optimize.py  plot.py  sampling.py
src/pyrinst/config/: _unit_data.py  atomic_data.json  constants.py  formats.py  units.py
src/pyrinst/core/: __init__.py  modes.py  rp.py
src/pyrinst/core/opt/: hessian.py  optimizers.py  projections.py
src/pyrinst/core/pes/: __init__.py  abc.py  factory.py  mace.py  proxies.py
src/pyrinst/core/pes/drivers/: __init__.py  abc.py  gaussian.py  orca.py
src/pyrinst/io/: formats.py  logging_config.py  xyz.py
src/pyrinst/opt/: __init__.py  hessian.py  optimizers.py  projections.py
src/pyrinst/potentials/: __init__.py  base.py  executors.py  factory.py  fixatom.py  gaussian.py  mace.py  orca.py  vasp.py
src/pyrinst/utils/: coordinates.py  elements.py  fep.py  formats.py  mechanics.py  numderiv.py  pimc.py  reference.py  units.py
tests/: test_elements.py  test_elements_data.py  test_units.py  test_xyz.py
tests/bkmp/: H2.json  H2_guess.xyz  TS_guess.xyz  bkmp.pyf  cart.f90  custom_pes.py  jacobi.f90  run.sh
tests/examples/bkmp/: H.json  bkmp2send.f  custom_pes.py  full.json  makefile  run.sh
tests/examples/fep/: run.sh  test_fep.py  test_ref.py
tests/examples/g09_H+CH4/: run.sh
tests/examples/g16_H+CH4/: H.xyz  driver.sh  header_singlet  run.sh  server.sh
tests/examples/inst-fep/: run.sh
tests/examples/muller_brown/: custom_pes.py  run.sh
tests/examples/vasp/: run.sh
tests/examples/water_trimer_orca/: orca.slurm  run.sh
tests/fep/: C2H2.xyz  MACE-OFF24_medium.model  a.pkl  eval.sh  run.sh  test_fep.py  test_pimc.py  test_ref.py
tests/g09_H+CH4/: CH4.xyz  TS.xyz  header_doublet  run.sh
tests/gpu/: check_mace_env.sh  run_mace_release_checks.sh
tests/inst-fep/: eval.sh  run.sh  water.xyz
tests/muller_brown/: TS1_guess.txt  custom_pes.py  min1_guess.txt  min2_guess.txt  run.sh
tests/smoke/: release_smoke_test.sh
tests/unit/: test_elements.py  test_units.py  test_xyz.py
tests/unittest/: template_gaussian.txt  template_orca.inp  test_cli_modules.py  test_elements.py  test_elements_data.py  test_executor.py  test_gaussian.py  test_instplot.py  test_ipc_driver.py  test_mace.py  test_mechanics.py  test_orca.py  test_units.py  test_xyz.py
tests/vasp/: INCAR  KPOINTS  fixed.xyz  guess_TS.xyz  guess_min.xyz  run.sh
tests/water_trimer_orca/: header.txt  min_guess.xyz  run.sh  ts_guess.xyz
